{
  "version": 4,
  "terraform_version": "1.11.2",
  "serial": 150,
  "lineage": "1bd96311-38ec-376d-4b77-2914bef27c25",
  "resources": [
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "alb-app-sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:590183972842:security-group/sg-04e236b284c6fbd99",
            "description": "Internal ALB for app layer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04e236b284c6fbd99",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b3f68ef7dd17c053"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "alb-app-sg",
            "name_prefix": "",
            "owner_id": "590183972842",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "alb-app-sg",
              "Project": "KTB-personal-project"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "alb-app-sg",
              "Project": "KTB-personal-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c1be2bf94876b959"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "alb-sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:590183972842:security-group/sg-0459597d22575c106",
            "description": "Allow HTTP/HTTPS from anywhere",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0459597d22575c106",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "590183972842",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "alb-sg",
              "Project": "KTB-personal-project"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "alb-sg",
              "Project": "KTB-personal-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c1be2bf94876b959"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "app-sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:590183972842:security-group/sg-023c52357c6304559",
            "description": "Allow traffic from app alb",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-023c52357c6304559",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04e236b284c6fbd99"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "app-sg",
            "name_prefix": "",
            "owner_id": "590183972842",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "app-sg",
              "Project": "KTB-personal-project"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "app-sg",
              "Project": "KTB-personal-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c1be2bf94876b959"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "db-sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:590183972842:security-group/sg-087cb9e6f9a40fd12",
            "description": "Allow traffic from app",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-087cb9e6f9a40fd12",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-023c52357c6304559"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "db-sg",
            "name_prefix": "",
            "owner_id": "590183972842",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "db-sg",
              "Project": "KTB-personal-project"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "db-sg",
              "Project": "KTB-personal-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c1be2bf94876b959"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "web-sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:590183972842:security-group/sg-0b3f68ef7dd17c053",
            "description": "Allow traffic from ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b3f68ef7dd17c053",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0459597d22575c106"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web-sg",
            "name_prefix": "",
            "owner_id": "590183972842",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "web-sg",
              "Project": "KTB-personal-project"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "web-sg",
              "Project": "KTB-personal-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c1be2bf94876b959"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cidr_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "alb-http",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-1287919861",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0459597d22575c106",
            "security_group_rule_id": "sgr-0d4738f19532e1aea",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "alb-https",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-3699680152",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0459597d22575c106",
            "security_group_rule_id": "sgr-09c50373ea8cab200",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "alb-app-sg",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-789914411",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-04e236b284c6fbd99",
            "security_group_rule_id": "sgr-0630084c664a6005a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "alb-sg",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2803680812",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0459597d22575c106",
            "security_group_rule_id": "sgr-0f7a033f24b226f98",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "app-sg",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2782869397",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-023c52357c6304559",
            "security_group_rule_id": "sgr-035b91b840e1008ac",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "db-sg",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2504161259",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-087cb9e6f9a40fd12",
            "security_group_rule_id": "sgr-0509233486efd1211",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "web-sg",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3161471541",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0b3f68ef7dd17c053",
            "security_group_rule_id": "sgr-04e7cb0a82ad71d41",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ref_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "alb-app-from-web",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8080,
            "id": "sgrule-163507869",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04e236b284c6fbd99",
            "security_group_rule_id": "sgr-0678bbd61a516ca0d",
            "self": false,
            "source_security_group_id": "sg-0b3f68ef7dd17c053",
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "app-from-alb-app",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8080,
            "id": "sgrule-385772675",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-023c52357c6304559",
            "security_group_rule_id": "sgr-0a3f9d20b486dbfc0",
            "self": false,
            "source_security_group_id": "sg-04e236b284c6fbd99",
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "db-from-app",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3306,
            "id": "sgrule-3599542373",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-087cb9e6f9a40fd12",
            "security_group_rule_id": "sgr-05e39e3f813dfaac4",
            "self": false,
            "source_security_group_id": "sg-023c52357c6304559",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "web-from-alb",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 80,
            "id": "sgrule-591224424",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b3f68ef7dd17c053",
            "security_group_rule_id": "sgr-059c9379911499fff",
            "self": false,
            "source_security_group_id": "sg-0459597d22575c106",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ap-northeast-2a",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03d3bd4f7fc723a75",
            "arn": "arn:aws:ec2:ap-northeast-2:590183972842:elastic-ip/eipalloc-03d3bd4f7fc723a75",
            "association_id": "eipassoc-07c11702f1ed19eab",
            "domain": "vpc",
            "id": "eipalloc-03d3bd4f7fc723a75",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0ee41ecd101dc39c7",
            "private_dns": "ip-10-2-1-243.ap-northeast-2.compute.internal",
            "private_ip": "10.2.1.243",
            "public_dns": "ec2-54-180-183-219.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "54.180.183.219",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ap-northeast-2c",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01b4742735a49386a",
            "arn": "arn:aws:ec2:ap-northeast-2:590183972842:elastic-ip/eipalloc-01b4742735a49386a",
            "association_id": "eipassoc-02054601e432522d5",
            "domain": "vpc",
            "id": "eipalloc-01b4742735a49386a",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-03a8fa527ececa16c",
            "private_dns": "ip-10-2-2-98.ap-northeast-2.compute.internal",
            "private_ip": "10.2.2.98",
            "public_dns": "ec2-3-36-215-10.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.36.215.10",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:590183972842:internet-gateway/igw-08fd0c2264f1f1e92",
            "id": "igw-08fd0c2264f1f1e92",
            "owner_id": "590183972842",
            "tags": {
              "Environment": "prod",
              "Name": "prod-vpc-igw",
              "Project": "KTB-personal-project"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-vpc-igw",
              "Project": "KTB-personal-project"
            },
            "vpc_id": "vpc-0c1be2bf94876b959"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ap-northeast-2a",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03d3bd4f7fc723a75",
            "association_id": "eipassoc-07c11702f1ed19eab",
            "connectivity_type": "public",
            "id": "nat-0d447cf430818b5c3",
            "network_interface_id": "eni-0ee41ecd101dc39c7",
            "private_ip": "10.2.1.243",
            "public_ip": "54.180.183.219",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-04c6c6b29881060f6",
            "tags": {
              "Environment": "prod",
              "Name": "prod-vpc-natgw-ap-northeast-2a",
              "Project": "KTB-personal-project"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-vpc-natgw-ap-northeast-2a",
              "Project": "KTB-personal-project"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ap-northeast-2c",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01b4742735a49386a",
            "association_id": "eipassoc-02054601e432522d5",
            "connectivity_type": "public",
            "id": "nat-0ee0c20a515f860c6",
            "network_interface_id": "eni-03a8fa527ececa16c",
            "private_ip": "10.2.2.98",
            "public_ip": "3.36.215.10",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-016dd0f1c81aa1d36",
            "tags": {
              "Environment": "prod",
              "Name": "prod-vpc-natgw-ap-northeast-2c",
              "Project": "KTB-personal-project"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-vpc-natgw-ap-northeast-2c",
              "Project": "KTB-personal-project"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ap-northeast-2a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:590183972842:route-table/rtb-0e7c72d0ff3ecafa6",
            "id": "rtb-0e7c72d0ff3ecafa6",
            "owner_id": "590183972842",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d447cf430818b5c3",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod",
              "Name": "prod-vpc-private-rt-ap-northeast-2a",
              "Project": "KTB-personal-project"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-vpc-private-rt-ap-northeast-2a",
              "Project": "KTB-personal-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c1be2bf94876b959"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ap-northeast-2c",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:590183972842:route-table/rtb-08152da0f2fd96849",
            "id": "rtb-08152da0f2fd96849",
            "owner_id": "590183972842",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ee0c20a515f860c6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod",
              "Name": "prod-vpc-private-rt-ap-northeast-2c",
              "Project": "KTB-personal-project"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-vpc-private-rt-ap-northeast-2c",
              "Project": "KTB-personal-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c1be2bf94876b959"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:590183972842:route-table/rtb-0d3c02012039fddd1",
            "id": "rtb-0d3c02012039fddd1",
            "owner_id": "590183972842",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08fd0c2264f1f1e92",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod",
              "Name": "prod-vpc-public-rt",
              "Project": "KTB-personal-project"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-vpc-public-rt",
              "Project": "KTB-personal-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c1be2bf94876b959"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ap-northeast-2a-10.2.3.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-028bf0db8c3da5e6a",
            "route_table_id": "rtb-0e7c72d0ff3ecafa6",
            "subnet_id": "subnet-0e77464c5170e1c34"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ap-northeast-2a-10.2.5.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07c0cb77e733fd1b8",
            "route_table_id": "rtb-0e7c72d0ff3ecafa6",
            "subnet_id": "subnet-04b8c1c1d224e4f6b"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ap-northeast-2a-10.2.7.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d2e90c11032e09d0",
            "route_table_id": "rtb-0e7c72d0ff3ecafa6",
            "subnet_id": "subnet-07d436f565b481c2a"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ap-northeast-2c-10.2.4.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0075232bd2743046e",
            "route_table_id": "rtb-08152da0f2fd96849",
            "subnet_id": "subnet-094d885a896a238e4"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ap-northeast-2c-10.2.6.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d1dd1c01644d9257",
            "route_table_id": "rtb-08152da0f2fd96849",
            "subnet_id": "subnet-003380b120bc6ed9a"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ap-northeast-2c-10.2.8.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0430c89a4454c5f23",
            "route_table_id": "rtb-08152da0f2fd96849",
            "subnet_id": "subnet-0f2c2cf7c13dbe387"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ap-northeast-2a-10.2.1.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04c58cf16f9e523b8",
            "route_table_id": "rtb-0d3c02012039fddd1",
            "subnet_id": "subnet-04c6c6b29881060f6"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ap-northeast-2c-10.2.2.0/24",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ca8e3c0699030f5c",
            "route_table_id": "rtb-0d3c02012039fddd1",
            "subnet_id": "subnet-016dd0f1c81aa1d36"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ap-northeast-2a-10.2.1.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:590183972842:subnet/subnet-04c6c6b29881060f6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.2.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04c6c6b29881060f6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "590183972842",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "prod-vpc-public-ap-northeast-2a",
              "Project": "KTB-personal-project"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-vpc-public-ap-northeast-2a",
              "Project": "KTB-personal-project"
            },
            "vpc_id": "vpc-0c1be2bf94876b959"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ap-northeast-2a-10.2.3.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:590183972842:subnet/subnet-0e77464c5170e1c34",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.2.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e77464c5170e1c34",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590183972842",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "prod-vpc-web-ap-northeast-2a",
              "Project": "KTB-personal-project"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-vpc-web-ap-northeast-2a",
              "Project": "KTB-personal-project"
            },
            "vpc_id": "vpc-0c1be2bf94876b959"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ap-northeast-2a-10.2.5.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:590183972842:subnet/subnet-04b8c1c1d224e4f6b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.2.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04b8c1c1d224e4f6b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590183972842",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "prod-vpc-app-ap-northeast-2a",
              "Project": "KTB-personal-project"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-vpc-app-ap-northeast-2a",
              "Project": "KTB-personal-project"
            },
            "vpc_id": "vpc-0c1be2bf94876b959"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ap-northeast-2a-10.2.7.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:590183972842:subnet/subnet-07d436f565b481c2a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.2.7.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07d436f565b481c2a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590183972842",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "prod-vpc-db-ap-northeast-2a",
              "Project": "KTB-personal-project"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-vpc-db-ap-northeast-2a",
              "Project": "KTB-personal-project"
            },
            "vpc_id": "vpc-0c1be2bf94876b959"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ap-northeast-2c-10.2.2.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:590183972842:subnet/subnet-016dd0f1c81aa1d36",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.2.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-016dd0f1c81aa1d36",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "590183972842",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "prod-vpc-public-ap-northeast-2c",
              "Project": "KTB-personal-project"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-vpc-public-ap-northeast-2c",
              "Project": "KTB-personal-project"
            },
            "vpc_id": "vpc-0c1be2bf94876b959"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ap-northeast-2c-10.2.4.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:590183972842:subnet/subnet-094d885a896a238e4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.2.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-094d885a896a238e4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590183972842",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "prod-vpc-web-ap-northeast-2c",
              "Project": "KTB-personal-project"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-vpc-web-ap-northeast-2c",
              "Project": "KTB-personal-project"
            },
            "vpc_id": "vpc-0c1be2bf94876b959"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ap-northeast-2c-10.2.6.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:590183972842:subnet/subnet-003380b120bc6ed9a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.2.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-003380b120bc6ed9a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590183972842",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "prod-vpc-app-ap-northeast-2c",
              "Project": "KTB-personal-project"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-vpc-app-ap-northeast-2c",
              "Project": "KTB-personal-project"
            },
            "vpc_id": "vpc-0c1be2bf94876b959"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ap-northeast-2c-10.2.8.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:590183972842:subnet/subnet-0f2c2cf7c13dbe387",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.2.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f2c2cf7c13dbe387",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590183972842",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "prod-vpc-db-ap-northeast-2c",
              "Project": "KTB-personal-project"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-vpc-db-ap-northeast-2c",
              "Project": "KTB-personal-project"
            },
            "vpc_id": "vpc-0c1be2bf94876b959"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:590183972842:vpc/vpc-0c1be2bf94876b959",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-0933355746eb4883f",
            "default_route_table_id": "rtb-07f26fe333ef0ce39",
            "default_security_group_id": "sg-0966ba006ca4145c0",
            "dhcp_options_id": "dopt-0c2a02f151f60cfe0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c1be2bf94876b959",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07f26fe333ef0ce39",
            "owner_id": "590183972842",
            "tags": {
              "Environment": "prod",
              "Name": "prod-vpc",
              "Project": "KTB-personal-project"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-vpc",
              "Project": "KTB-personal-project"
            }
          }
        }
      ]
    }
  ]
}